--- a/_posts/2019-12-06-SRGAN.md
+++ b/_posts/2019-12-06-SRGAN.md
@@ -10,6 +10,7 @@ tags:
   - Object Detection
   - Super Resolution
   - Quantitative Analysis
+mathjax: true
 ---
 
 ## Introduction
@@ -65,7 +66,7 @@ After obtainig these 4 differently preprocessed images, we then independently tr
 
 ## Super-resolution Model
 
-Super-Resolution Generative Adversarial Network (SRGAN)
+We used a [Super-Resolution Generative Adversarial Network (SRGAN)][2] as our super-resolution model to generate SR images. A generative adversarial network (GAN) is a class of machine learning systems which contains two neural networks (a generator, and a discriminator) that compete with each other in a game. Given a training set, this technique learns to generate new data with the same statistics as the training set. A super resolution generative adversarial network (SRGAN) is a GAN that aims to increase the resolution of low-resolution (LR) images $$I^{LR}$$ by learning the corresponding high-resolution (HR) images $$I^{HR}$$. The super resolution process synthesizes sub pixel information in LR imagery to generate super-resolved (SR) images $$I^{SR}$$. The LR images are obtained by downsampling operation with downsampling factor $$r$$. For an image with $$C$$ color channels, we describe $$I^{LR}$$ by a real-valued tensor of size $$W \times H \times C$$ and $$I^{HR}$$, $$I^{SR}$$ by $$rW \times rH \times rC$$ respectively.
 
 <figure>
     <a href="/assets/images/post-SRGAN/SRGAN-architecture.png"><img src="/assets/images/post-SRGAN/SRGAN-architecture.png"></a>
